Delayed GLTF loading, Bundle load by suffix, StringUtils.split() fixed, ParseException added